[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Streaming/stream.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Streaming/Label2.gd" type="Script" id=2]

[node name="stream" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="stream_UI" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftSide" type="VBoxContainer" parent="stream_UI"]
margin_right = 210.0
margin_bottom = 360.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="stream_UI/LeftSide"]
visible = false
margin_top = 155.0
margin_right = 55.0
margin_bottom = 186.0
text = "Choose
Pose"

[node name="Label2" type="Label" parent="stream_UI/LeftSide"]
visible = false
margin_top = 173.0
margin_right = 55.0
margin_bottom = 187.0
text = "Pose:"
script = ExtResource( 2 )

[node name="Button2" type="Button" parent="stream_UI/LeftSide"]
margin_top = 170.0
margin_right = 210.0
margin_bottom = 190.0
text = "SELL!"

[node name="Control" type="MarginContainer" parent="stream_UI"]
margin_left = 214.0
margin_right = 424.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReturnToMainButton" type="Button" parent="stream_UI/Control"]
margin_left = 52.0
margin_top = 340.0
margin_right = 158.0
margin_bottom = 360.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Return to Main"

[node name="RightSide" type="VBoxContainer" parent="stream_UI"]
margin_left = 428.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="stream_UI/RightSide"]
margin_right = 212.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="stream_UI/LeftSide/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="stream_UI/Control/ReturnToMainButton" to="." method="_on_ReturnToMainButton_pressed"]
